--- a/src/main/resources/jmix_portalWidget/html/advanced.jspf
+++ b/src/main/resources/jmix_portalWidget/html/advanced.jspf
@@ -5,7 +5,7 @@
 <c:set var="widgetHasEditView"
        value="${portal:getSpecificView(currentNode.primaryNodeTypeName, 'portal.edit', portalNode) != null}"/>
 <c:set var="widgetIsEditable" value="${jcr:hasPermission(currentNode, 'jcr:write_live')}"/>
-<c:set var="widgetFullView" value="${portal:getSpecificView(currentNode.primaryNodeTypeName, 'full', portalNode)}"/>
+<c:set var="widgetFullView" value="${portal:getSpecificView(currentNode.primaryNodeTypeName, 'portal.full', portalNode)}"/>
 
 <template:addResources type="javascript" resources="jquery.min.js,jquery-ui.min.js" />
 <template:addResources type="javascript" resources="app/portalWidgetWrapper.js" />
