--- a/src/main/resources/jmix_portalWidget/html/advanced.jspf
+++ b/src/main/resources/jmix_portalWidget/html/advanced.jspf
@@ -8,6 +8,7 @@
 <c:set var="widgetFullView" value="${portal:getSpecificView(currentNode.primaryNodeTypeName, 'portal.full', portalNode)}"/>
 
 <template:addResources type="javascript" resources="jquery.min.js,jquery-ui.min.js" />
+<template:addResources type="javascript" resources="angular.min.js" />
 <template:addResources type="javascript" resources="app/portalWidgetWrapper.js" />
 <template:addResources type="css" resources="box.advanced.css"/>
 
