--- a/src/main/resources/jmix_portalWidget/html/advanced.jspf
+++ b/src/main/resources/jmix_portalWidget/html/advanced.jspf
@@ -1,5 +1,7 @@
+<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
 <c:set var="portalMixin" value="<%= PortalConstants.JMIX_PORTAL %>"/>
 <c:set var="portalModelNT" value="<%= PortalConstants.JNT_PORTAL_MODEL %>"/>
+<c:set var="portalWidgetReferenceNT" value="<%= PortalConstants.JNT_PORTAL_WIDGET_REFERENCE %>"/>
 <c:set var="fullTemplateProp" value="<%= PortalConstants.J_FULL_TEMPLATE %>"/>
 <c:set var="portalNode" value="${jcr:getParentOfType(currentNode, portalMixin)}"/>
 <c:set var="isModel" value="${jcr:isNodeType(portalNode, portalModelNT)}"/>
@@ -14,15 +16,17 @@
 <template:addResources type="javascript" resources="app/portalWidgetWrapper.js" />
 <template:addResources type="css" resources="box.advanced.css"/>
 
+<fmt:message key="portalWidget.box.advanced.deleteConfirmMessage" var="deleteConfirmMessage"/>
 <script type="text/javascript">
     // skin javascript controller
     $(document).ready(function(){
-        new Jahia.Portal.AdvancedWidgetWrapper("${currentNode.identifier}", ${widgetIsEditable}, ${widgetFullView != null}, ${isModel});
+        new Jahia.Portal.AdvancedWidgetWrapper("${currentNode.identifier}", ${widgetIsEditable}, ${widgetFullView != null}, ${isModel}, "${deleteConfirmMessage}");
     });
 </script>
 
 <div class="widget-header">
-    <h4 class="panel-title" style="${textStyle}">${currentNode.properties["jcr:title"].string}</h4>
+    <c:set var="referencedWidget" value="${jcr:isNodeType(currentNode, portalWidgetReferenceNT) ? currentNode.properties['j:node'].node : currentNode}"/>
+    <h4 class="panel-title" style="${textStyle}">${referencedWidget.properties["jcr:title"].string}</h4>
 
     <div class="widget-tools">
         <i class="resize_switch ${iconColorClass}"></i>
