--- a/src/main/resources/jmix_portalWidget/html/advanced.jspf
+++ b/src/main/resources/jmix_portalWidget/html/advanced.jspf
@@ -1,15 +1,20 @@
 <%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
-<c:set var="portalMixin" value="<%= PortalConstants.JMIX_PORTAL %>"/>
-<c:set var="portalModelNT" value="<%= PortalConstants.JNT_PORTAL_MODEL %>"/>
 <c:set var="portalWidgetReferenceNT" value="<%= PortalConstants.JNT_PORTAL_WIDGET_REFERENCE %>"/>
-<c:set var="fullTemplateProp" value="<%= PortalConstants.J_FULL_TEMPLATE %>"/>
-<c:set var="portalNode" value="${jcr:getParentOfType(currentNode, portalMixin)}"/>
-<c:set var="isModel" value="${jcr:isNodeType(portalNode, portalModelNT)}"/>
 
-<c:set var="widgetHasEditView"
-       value="${portal:getSpecificView(currentNode.primaryNodeTypeName, 'portal.edit', portalNode) != null}"/>
+<c:set var="widgetHasEditView" value="${false}"/>
+<c:set var="widgetFullView" value="${false}"/>
+
+<c:forEach items="${portalContext.portalWidgetTypes}" var="widgetType">
+    <c:if test="${widgetType.name eq currentNode.primaryNodeType.name}">
+        <c:forEach items="${widgetType.views}" var="widgetView">
+            <c:set var="widgetHasEditView" value="${widgetHasEditView || widgetView.key eq 'portal.edit'}"/>
+            <c:set var="widgetFullView" value="${widgetFullView || widgetView.key eq 'portal.full'}"/>
+        </c:forEach>
+    </c:if>
+</c:forEach>
+
 <c:set var="widgetIsEditable" value="${jcr:hasPermission(currentNode, 'jcr:write_live')}"/>
-<c:set var="widgetFullView" value="${portal:getSpecificView(currentNode.primaryNodeTypeName, 'portal.full', portalNode)}"/>
+
 
 <template:addResources type="javascript" resources="jquery.min.js,jquery-ui.min.js" />
 <template:addResources type="javascript" resources="angular.min.js" />
@@ -20,7 +25,7 @@
 <script type="text/javascript">
     // skin javascript controller
     $(document).ready(function(){
-        new Jahia.Portal.AdvancedWidgetWrapper("${currentNode.identifier}", ${widgetIsEditable}, ${widgetFullView != null}, ${isModel}, "${deleteConfirmMessage}");
+        new Jahia.Portal.AdvancedWidgetWrapper("${currentNode.identifier}", ${widgetIsEditable}, ${widgetFullView != null}, "${deleteConfirmMessage}");
     });
 </script>
 
@@ -37,7 +42,7 @@
         <c:if test="${widgetIsEditable}">
             <i class="icon-remove ${iconColorClass} delete_action"></i>
         </c:if>
-        <c:if test="${isModel && widgetIsEditable}">
+        <c:if test="${widgetIsEditable}">
             <i class="icon-edit ${iconColorClass} model_switch"></i>
         </c:if>
     </div>
