--- a/src/main/resources/css/box.advanced.css
+++ b/src/main/resources/css/box.advanced.css
@@ -1,41 +1,35 @@
 .widget {
-    border: 1px solid #ddd;
-    border-radius: 6px;
-    box-shadow: 0 1px 2px rgba(0,0,0,.075);
     margin-bottom: 20px;
 }
 
 .widget .widget-header {
-    border-bottom: 1px solid;
     cursor: move;
     position: relative;
-    -webkit-border-top-left-radius: 6px;
-    -webkit-border-top-right-radius: 6px;
-    -moz-border-radius-topleft: 6px;
-    -moz-border-radius-topright: 6px;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px
+    overflow: hidden;
+    margin-bottom: 1px;
 }
 
 .widget-purple .widget-header {
     background-color: #6600cc;
-    border-color: #e1bbf1;
 }
 
 .widget-blue .widget-header {
     background-color: #3399ff;
-    border-color: #bce8f1;
 }
 
 .widget-green .widget-header {
     background-color: #46a546;
-    border-color: #b1f1b8;
+}
+
+.widget-white .widget-header {
+    background-color: #fff;
 }
 
 .widget .widget-header h4{
     margin-top: 0;
     padding-top: 10px;
     margin-left: 15px;
+    text-transform: uppercase;
 }
 
 .widget .widget-tools {
