--- a/src/main/resources/jmix_portalWidget/html/advanced.jspf
+++ b/src/main/resources/jmix_portalWidget/html/advanced.jspf
@@ -17,16 +17,20 @@
 <template:addResources type="javascript" resources="app/portalWidgetWrapper.js" />
 <template:addResources type="css" resources="box.advanced.css"/>
 
-<fmt:message key="portalWidget.box.advanced.deleteConfirmMessage" var="deleteConfirmMessage"/>
+<c:set value="${referencedWidget.properties['jcr:title'].string}" var="widgetTitle"/>
+<fmt:message key="portalWidget.box.advanced.deleteConfirmMessage" var="deleteConfirmMessage">
+    <fmt:param value="${widgetTitle}"/>
+</fmt:message>
+<fmt:message key="portalWidget.box.advanced.ref.deleteConfirmMessage" var="deleteConfirmMessageRef"/>
 <script type="text/javascript">
     // skin javascript controller
     $(document).ready(function(){
-        new Jahia.Portal.AdvancedWidgetWrapper("${currentNode.identifier}", ${widgetIsEditable}, ${widgetFullView}, "${deleteConfirmMessage}");
+        new Jahia.Portal.AdvancedWidgetWrapper("${currentNode.identifier}", ${widgetIsEditable}, ${widgetFullView}, "${deleteConfirmMessage}", "${deleteConfirmMessageRef}");
     });
 </script>
 
 <div class="widget-header">
-    <h4 class="panel-title" style="${textStyle}">${referencedWidget.properties["jcr:title"].string}</h4>
+    <h4 class="panel-title" style="${textStyle}">${widgetTitle}</h4>
 
     <div class="widget-tools">
         <i class="resize_switch ${iconColorClass}"></i>
