--- a/src/main/resources/jmix_portalWidget/html/advanced.jspf
+++ b/src/main/resources/jmix_portalWidget/html/advanced.jspf
@@ -18,6 +18,7 @@
 <template:addResources type="javascript" resources="portal/vendor/angular.min.js" />
 <template:addResources type="javascript" resources="portal/app/portalWidgetWrapper.js" />
 <template:addResources type="css" resources="box.advanced.css"/>
+<template:addResources type="css" resources="portal.bs3.css"/>
 
 <c:set value="${referencedWidget.properties['jcr:title'].string}" var="widgetTitle"/>
 <fmt:message key="portalWidget.box.advanced.deleteConfirmMessage" var="deleteConfirmMessage">
@@ -37,14 +38,14 @@
     <div class="widget-tools">
         <i class="resize_switch ${iconColorClass}"></i>
         <c:if test="${widgetHasEditView && widgetIsEditable}">
-            <i class="icon-cog ${iconColorClass} edit_switch"></i>
+            <i class="glyphicon glyphicon-cog ${iconColorClass} edit_switch"></i>
         </c:if>
-        <i class="icon-minus ${iconColorClass} minimize_action"></i>
+        <i class="glyphicon glyphicon-minus ${iconColorClass} minimize_action"></i>
         <c:if test="${widgetIsEditable}">
-            <i class="icon-remove ${iconColorClass} delete_action"></i>
+            <i class="glyphicon glyphicon-trash ${iconColorClass} delete_action"></i>
         </c:if>
         <c:if test="${widgetIsEditable}">
-            <i class="icon-edit ${iconColorClass} model_switch"></i>
+            <i class="glyphicon glyphicon-edit ${iconColorClass} model_switch"></i>
         </c:if>
     </div>
 </div>
