--- a/src/main/resources/css/box.advanced.css
+++ b/src/main/resources/css/box.advanced.css
@@ -7,6 +7,7 @@
     position: relative;
     overflow: hidden;
     margin-bottom: 1px;
+    padding-bottom: 10px;
 }
 
 .widget-purple .widget-header {
